<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.horaapps.leafpic.activities.MainActivity">



    <item
        android:id="@+id/sort_action"
        android:title="@string/sort_menu_title"
        app:showAsAction="ifRoom">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".PhotosActivity">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/name_sort_mode"
                    android:title="@string/name"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/date_taken_sort_mode"
                    android:checked="true"
                    android:title="@string/date"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/size_sort_mode"
                    android:title="@string/size"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/type_sort_action"
                    android:title="@string/type"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/numeric_sort_mode"
                    android:title="@string/numeric"
                    app:showAsAction="never" />
            </group>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/ascending_sort_order"
                    android:title="@string/ascending"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
    <group android:id="@+id/edit_mode_items">
        <item
            android:id="@+id/sharePhotos"
            android:title="@string/share"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/delete"
            android:title="@string/delete"
            app:showAsAction="ifRoom" />

    </group>

    <group android:id="@+id/one_selected_items">



    </group>


    <group android:id="@+id/album_options_menu" android:visible="false">
        <item
            android:id="@+id/exclude"
            android:title="@string/exclude"
            app:showAsAction="never" />
        <item
            android:id="@+id/pin_album"
            android:title="@string/pin"
            app:showAsAction="never" />

        <item
            android:id="@+id/shortcut"
            android:title="@string/install_shortcut"
            app:showAsAction="never" />
        <item
            android:id="@+id/clear_album_cover"
            android:title="@string/clear_preview"
            android:visible="false"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/settings"-->
        <!--android:title="@string/settings"-->
        <!--app:showAsAction="never" />-->
</menu>