<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.horaapps.leafpic.activities.SingleMediaActivity"
>

    <group android:id="@+id/only_photos_options">
        <item
            android:id="@+id/action_edit"
            android:title="@string/edit"
            app:showAsAction="always"
            />

        <item
            android:id="@+id/action_bookmark"
            android:title="@string/action_bookmark"
            app:showAsAction="always"
            />
    </group>


    <group android:id="@+id/on_internal_storage">
        <item
            android:id="@+id/action_share"
            android:orderInCategory="0"
            android:title="@string/share"
            app:showAsAction="always"
        />
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="1"
            android:title="@string/delete"
            app:showAsAction="always"
        />



    </group>

    <!--<item-->
        <!--android:title="@string/more"-->
        <!--app:showAsAction="never">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/action_edit_with"-->
                <!--android:title="@string/edit_with"-->
                <!--app:showAsAction="never" />-->
            <!--<item-->
                <!--android:id="@+id/action_open_with"-->
                <!--android:title="@string/open_with"-->
                <!--app:showAsAction="never" />-->
            <!--<item-->
                <!--android:title="@string/upload"-->
                <!--android:visible="false"-->
                <!--app:showAsAction="never" />-->
            <!--<item-->
                <!--android:id="@+id/action_settings"-->
                <!--android:title="@string/settings"-->
                <!--app:showAsAction="never" />-->
        <!--</menu>-->
    <!--</item>-->
    <!-- End Albums Stuff -->
</menu>