<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DrawerMain"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:clickable="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/drawer_scrollbar"
        android:scrollbarSize="4dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/Drawer_Header"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:elevation="@dimen/card_elevation"
                android:orientation="vertical"
                android:foreground="@drawable/ripple"
                android:clickable="true"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:paddingLeft="@dimen/big_spacing"
                        android:paddingBottom="@dimen/small_spacing"
                        />
                    <TextView
                        android:id="@+id/txtLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_white_1000"
                        android:text="LeafPic"
                        android:textSize="@dimen/big_text"
                        android:paddingLeft="@dimen/big_spacing"
                        android:paddingBottom="2dp"
                        android:letterSpacing="0.15"/>
                    <!--android:letterSpacing="0.25"-->
                    <TextView
                        android:id="@+id/txtVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_grey_300"
                        android:text="Ver."
                        android:textSize="@dimen/medium_text"
                        android:paddingLeft="@dimen/big_spacing"
                        android:paddingBottom="@dimen/small_spacing"
                        android:letterSpacing="0.1"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/Drawer_Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sub_small_spacing"
                android:orientation="vertical"
                android:scrollbars="vertical"
                >




                <!-- HIDDEN ALBUMS -->
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/ll_drawer_hidden"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    >

                    <com.mikepenz.iconics.view.IconicsImageView
                        android:id="@+id/Drawer_hidden_Icon"
                        android:layout_width="@dimen/icon_width_height"
                        android:layout_height="@dimen/icon_width_height"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/big_spacing"
                        android:layout_marginRight="@dimen/big_spacing"
                        app:iiv_icon="faw-low-vision"
                        />
                    <TextView
                        android:id="@+id/Drawer_hidden_Item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/hidden_folder"
                        android:textColor="@color/md_dark_background"
                        android:textSize="16sp"
                        />
                </LinearLayout>


                <!-- DEFAULT ALBUMS -->

                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_drawer_Default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        >

                        <com.mikepenz.iconics.view.IconicsImageView
                            android:id="@+id/Drawer_Default_Icon"
                            android:layout_width="@dimen/icon_width_height"
                            android:layout_height="@dimen/icon_width_height"
                            android:layout_gravity="center_vertical"
                            app:iiv_icon="gmd-folder"
                            android:layout_marginLeft="@dimen/big_spacing"
                            android:layout_marginRight="@dimen/big_spacing"
                            />
                        <TextView
                            android:id="@+id/Drawer_Default_Item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/local_folder"
                            android:textColor="@color/md_dark_background"
                            android:textSize="16sp"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            />
                    </LinearLayout>



                <!-- WALLPAPERS -->
                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_drawer_Wallpapers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/ripple"
                        android:clickable="true">

                        <com.mikepenz.iconics.view.IconicsImageView
                            android:id="@+id/Drawer_wallpapers_Icon"
                            android:layout_width="@dimen/icon_width_height"
                            android:layout_height="@dimen/icon_width_height"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/big_spacing"
                            android:layout_marginRight="@dimen/big_spacing"
                            app:iiv_icon="gmd-bookmark-border" />

                        <TextView
                            android:id="@+id/Drawer_wallpapers_Item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            android:text="@string/wallpapers"
                            android:textColor="@color/md_dark_background"
                            android:textSize="16sp" />
                    </LinearLayout>

                <!--TODO: FIX THE LITTLE GRADIENT SHADOW-->

                <View
                    android:id="@+id/Drawer_Body_Divider"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="0dp"
                    android:padding="0dp"
                    />



                <!-- SETTING -->
                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_drawer_Setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        >

                        <com.mikepenz.iconics.view.IconicsImageView
                            android:id="@+id/Drawer_Setting_Icon"
                            android:layout_width="@dimen/icon_width_height"
                            android:layout_height="@dimen/icon_width_height"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/big_spacing"
                            android:layout_marginRight="@dimen/big_spacing"
                            app:iiv_icon="gmd-settings"
                            />
                        <TextView
                            android:id="@+id/Drawer_Setting_Item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            android:text="@string/settings"
                            android:textColor="@color/md_dark_background"
                            android:textSize="16sp"
                            />
                    </LinearLayout>



            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>